Structure of the navbar

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -117,6 +117,7 @@ aside li {
   pointer-events: auto;
   visibility: visible;
 }
+
 /* reveal aside */
 .overlay:target aside {
   transform: translateX(calc(var(--aside-width) * -1));
@@ -127,9 +128,9 @@ aside li {
 * components/Header
 * --------------------------------------------------
 */
+
 .header {
   align-items: center;
-  background: #fff;
   display: flex;
   height: var(--header-height);
   padding: 0 1rem;
@@ -152,20 +153,22 @@ aside li {
 
 .header-menu-desktop {
   display: none;
-  grid-gap: 1rem;
+
   @media (min-width: 45em) {
     display: flex;
-    grid-gap: 1rem;
+    justify-content: space-between;
     margin-left: 3rem;
   }
 }
 
 .header-menu-item {
+  flex: 1 1 auto;
   cursor: pointer;
 }
 
 .header-ctas {
   align-items: center;
+  justify-content: end;
   display: flex;
   grid-gap: 1rem;
   margin-left: auto;
@@ -246,6 +249,7 @@ aside li {
   align-items: center;
   display: flex;
 }
+
 /*
 * --------------------------------------------------
 * components/Search
@@ -314,6 +318,7 @@ aside li {
 
 .featured-collection-image {
   aspect-ratio: 1 / 1;
+
   @media (min-width: 45em) {
     aspect-ratio: 16 / 9;
   }
@@ -329,6 +334,7 @@ aside li {
   display: grid;
   grid-gap: 1.5rem;
   grid-template-columns: repeat(2, 1fr);
+
   @media (min-width: 45em) {
     grid-template-columns: repeat(4, 1fr);
   }
@@ -362,6 +368,7 @@ aside li {
 .collection-description {
   margin-bottom: 1rem;
   max-width: 95%;
+
   @media (min-width: 45em) {
     max-width: 600px;
   }
@@ -386,6 +393,7 @@ aside li {
 */
 .product {
   display: grid;
+
   @media (min-width: 45em) {
     grid-template-columns: 1fr 1fr;
     grid-gap: 4rem;
