--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -161,7 +161,6 @@ aside li {
   @media (min-width: 45em) {
     display: flex;
     justify-content: space-between;
-    margin-left: 3rem;
   }
 }
 
@@ -172,7 +171,7 @@ aside li {
 
 .header-ctas {
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   display: flex;
   grid-gap: 1rem;
   margin-left: auto;
