--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -189,10 +189,7 @@ aside li {
 
 .header-ctas {
 
-  position: absolute;
-  right: 0;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  margin-bottom: 2px;
 
   @media (min-width: 1024px) {
     flex: 1 1 0%;
